cmake: only append file on subsequent target exports

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ endif()
 
 # export targets for find_package config mode
 export(TARGETS tinyxml2
-      APPEND FILE ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Targets.cmake)
+      FILE ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Targets.cmake)
 
 install(TARGETS tinyxml2
         EXPORT ${CMAKE_PROJECT_NAME}Targets
@@ -111,8 +111,13 @@ else()
 endif()
 
 # export targets for find_package config mode
-export(TARGETS tinyxml2_static
-      APPEND FILE ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Targets.cmake)
+	if(BUILD_SHARED_LIBS) #append to *Targets.cmake
+		export(TARGETS tinyxml2_static
+				APPEND FILE ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Targets.cmake)
+	else() #discard previous contents of *Targets.cmake
+		export(TARGETS tinyxml2_static
+				FILE ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Targets.cmake)
+	endif()
 
 install(TARGETS tinyxml2_static
         EXPORT ${CMAKE_PROJECT_NAME}Targets
